kubernetes/auth/security-policies/security-policy-capacitor.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
# Protects the Capacitor HTTPRoute (in monitoring namespace)
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-capacitor
  namespace: monitoring
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: capacitor
  oidc:
    provider:
      issuer: "https://dex.whoverse.dev"
    clientID: "envoy-internal"
    clientSecret:
      name: dex-envoy-client-secret
    redirectURL: "https://capacitor.whoverse.dev/oauth2/callback"
    scopes:
      - openid
      - email
      - profile
